[tool.poetry]
name = "key-manager"
version = "0.1.0"
description = "StakeWise Operator CLI is used to generate and manage ETH2 validator keys."
authors = ["StakeWise Labs <info@stakewise.io>"]
readme = "README.md"
license = "AGPL-3.0-only"
packages = [{include = "key_manager"}]


[tool.poetry.dependencies]
python = "^3.10"
click = "==8.1.3"
web3 = "6.0.0b8"
py-ecc = "==6.0.0"
backoff = "==2.2.1"
colorama = "==0.4.6"
pycryptodome = "==3.16.0"
staking-deposit = {git = "https://github.com/ethereum/eth2.0-deposit-cli", rev = "v2.0.0"}
sw-utils = {git = "https://github.com/stakewise/sw-utils.git", rev = "v0.2.3"}
python-decouple = "==3.6"
multiproof = "==0.1.1"


[tool.poetry.group.dev.dependencies]
pylint = "==2.14.5"
mypy = "==0.971"
isort = "==5.10.1"
pytest = "==7.1.2"
pre-commit = "==2.20.0"
Flake8-pyproject = "==1.1.0"
black = "==22.10.0"
faker = "^15.3.4"


[tool.bandit]
exclude_dirs = ["tests/*"]

[tool.pylint."pre-commit-hook"]
disable = ["C0103", "C0114", "C0115", "C0116", "R0913"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "el", "e", "w", "f", "w3"]
extension-pkg-whitelist = "pydantic"

[tool.flake8]
max-line-length = 100
select = ["E121"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
