[tool.poetry]
name = "key-manager"
version = "0.1.2"
description = "StakeWise Operator CLI is used to generate and manage ETH2 validator keys."
authors = ["StakeWise Labs <info@stakewise.io>"]
readme = "README.md"
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "==3.10.9"
click = "==8.1.3"
web3 = "6.0.0b8"
py-ecc = "==6.0.0"
backoff = "==2.2.1"
colorama = "==0.4.6"
pycryptodome = "==3.16.0"
staking-deposit = {git = "https://github.com/ethereum/eth2.0-deposit-cli", rev = "v2.0.0"}
python-decouple = "==3.6"
multiproof = "==0.1.1"
milagro-bls-binding = "==1.9.0"
sw-utils = {git = "https://github.com/stakewise/sw-utils.git", rev = "v0.2.6"}
pyyaml = "==6.0"


[tool.poetry.group.dev.dependencies]
pylint = "==2.14.5"
mypy = "==0.971"
isort = "==5.10.1"
pytest = "==7.1.2"
pre-commit = "==2.20.0"
Flake8-pyproject = "==1.1.0"
black = "==22.10.0"
faker = "==15.3.4"
types-requests = "==2.28.11.7"
types-pyyaml = "==6.0.12.2"
pyinstaller = "==5.7.0"
bandit = "==1.7.4"


[tool.bandit]
exclude_dirs = ["tests/*"]

[tool.pylint."pre-commit-hook"]
disable = ["C0103", "C0114", "C0115", "C0116", "C0209", "R0801", "R0902", "R0903", "R0913", "R0914"]

[tool.pylint."BASIC"]
good-names = ["bar", "i", "el", "e", "w", "f", "w3"]
extension-pkg-whitelist = "pydantic"

[tool.flake8]
extend-ignore = ["E203", "E501"]  # line length will be checked by pylint

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
